2009-09-13  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac: set up MAEMO5 condition for automake

	* hildon/Makefile.am (gpe-timesheet.png): Conditionalise application icon size

2009-09-02  Graham Cobb  <g+770@cobb.uk.net>

	* ui.c (create_interface): Use stock icons on hildon where possible
	to simplify port to Fremantle
	(create_interface): Scale start/stop clock icons to fit toolbar

2009-04-15 Ned Ludd  <solar@gentoo.org>
	* gpe-base/gpe-timesheet: ui.h 
	* Icon Dir Unification. /usr/share/gpe/pixmaps/ -> /usr/share/pixmaps/gpe/
	* Targeted for gpe-3.0 release.

2008-12-07  Graham Cobb  <g+770@cobb.uk.net>

	* main.c (open_window): Change application name to GPE Timesheet

	* debian/*: Add debian directory for Maemo (copied from gpe-todo)

	* hildon/gpe-timesheet.desktop.in.in (_Name): Change name to GPE Timesheet

	* configure.ac: Add hildon/Makefile to AC_OUTPUT

	* hildon/*.png: Add icons for 26x26, 40x40 and 64x64.  
	Rename gpe-timesheet.png to gpe-timesheet-48x48.png

	* hildon/Makefile.am: Create separate Makefile to generate various icons for hildon

	* Makefile.am: Move hildon/ stuff into separate Makefile and add hildon to subdirs

2008-08-31  Phil Blundell  <pb@reciva.com>

	* po/da.po: New translation, courtesy Joe Hansen.
	* po/Makefile.in.in (EXTRA_DIST): Remove ChangeLog.
	* po/ChangeLog: Deleted.

2008-05-17  Florian Boor <florian.boor@kernelconcepts.de>

	* Update translations

2008-01-11  Graham Cobb  <g+770@cobb.uk.net>

	* ui.c (create_interface): Fix bug #120: do not touch show journal button widget
	in Hildon

2007-11-09  Graham Cobb  <g+770@cobb.uk.net>

	* ui.c (create_interface): Fix typo in previous change

2007-11-06  Graham Cobb  <g+770@cobb.uk.net>

	* main.c: Use HildonProgram and HildonWindow instead of 
	HildonApp and HildonAppView

2007-11-04  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac, Makefile.am: build and compile
	changes for new hildon libraries in chinook
